--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,3 +1,7 @@
+timestamps {
+timeout(time: 60, unit: 'SECONDS')
+
+{
 node('master')
 
 {
@@ -27,6 +31,7 @@ stage('ReleasetoTomcat')
     sh "scp -o StrictHostKeyChecking=no target/maven-web-application.war ec2-user@35.183.101.182:/opt/apache-tomcat-9.0.54/webapps/maven-web-application.war"
     }
 }
+    }
     }
     
 
