--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,5 @@
 timestamps {
-timeout(time: 60, unit: 'SECONDS')
-
-{
+timeout(time: 60, unit: 'SECONDS'){
 node('master')
 
 {
@@ -33,5 +31,4 @@ stage('ReleasetoTomcat')
 }
     }
     }
-    
-
+ 
