--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>3.1.1-RELEASE</version>
+	<version>1.0.0-RELEASE</version>
 	
 	<name>maven-web-application</name>
 
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Dinesh Practice Release</name>
-	      <url>http://ec2-35-183-31-188.ca-central-1.compute.amazonaws.com:9980/repository/practice-release/</url>
+	      <url>http://35.182.103.192:9980/repository/practice-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Dinesh Practice SnapShot </name>
-	      <url>http://ec2-35-183-31-188.ca-central-1.compute.amazonaws.com:9980/repository/practice-snapshot/</url>
+	      <url>http://35.182.103.192:9980/repository/practice-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
